src/static/css/custom.css
/* ... */
.navbar-inverse .navbar-nav li .active,
.navbar-inverse .navbar-nav li a:focus {
    color: #158cba;
}
/* ==================== */
/* code */
/* ==================== */
pre {
    font-size: 1.4rem;
}
code {
    color: black;
    white-space: pre !important;
    overflow: auto;
}
pre code {
    line-height: 1;
}
#post-content-div .source {
    min-width: 75vw;
    max-width: 80vw;
    text-align: left;
}
#post-content-div > pre {
    margin: 0 auto;
    width: 90vw;
    text-align: left;
}
.code pre {
    white-space: pre;
    line-height: 1.2;
    margin-left: 15px;
}
.linenos pre {
    white-space: pre-line;
    line-height: 1.2;
    margin-left: 5px;
}
/* ==================== */
/* 404 */
/* ==================== */
.not-found-container {
    border-radius: 0 0 5px 5px !important;
}
.not-found-row {
    text-align: center;
    display: flex;
}
.not-found-content {
    margin: auto;
}
.not-found-article a {
}
#not-found-list {
    text-align: left;
    margin: auto;
    width: 50%;
}
.not-found-footer {
    position: relative;
    bottom: 0;
}
/* ==================== */
/* images */
/* ==================== */
img {
    width: 100%;
    margin: auto;
}
#content img {
    padding: 5px;
}
.figure {
    padding: 15px;
    display: inline-block;
    float: left;
}
.img-float-left {
    float: left;
}
.img-float-right {
    float: right;
}
.img-zoom-05 {
    width: 5%;
}
.img-zoom-10 {
    width: 10%;
}
.img-zoom-15 {
    width: 15%;
}
.img-zoom-20 {
    width: 20%;
}
.img-zoom-25 {
    width: 25%;
}
.img-zoom-30 {
    width: 30%;
}
.img-zoom-35 {
    width: 35%;
}
.img-zoom-40 {
    width: 40%;
}
.img-zoom-45 {
    width: 45%;
}
.img-zoom-50 {
    width: 50%;
}
.img-zoom-55 {
    width: 55%;
}
.img-zoom-60 {
    width: 60%;
}
.img-zoom-65 {
    width: 65%;
}
.img-zoom-70 {
    width: 70%;
}
.img-zoom-75 {
    width: 75%;
}
.img-zoom-80 {
    width: 80%;
}
.img-zoom-85 {
    width: 85%;
}
.img-zoom-90 {
    width: 90%;
}
.img-zoom-95 {
    width: 95%;
}
/* ==================== */
/* header/nav */
/* ==================== */
header {
    width: 100%;
    left: 0;
}
.container-nav {
    background: white;
    width: 100%;
    border-bottom: 3px solid #e6e6e6;
}
.navbar {
    border: 0;
}
.banner-div,
#banner-image {
    display: none;
}
.navbar-collapse {
    font-size: 18px;
    font-size: 1.8rem;
    text-align: center;
    background: #f5f5f5;
    border-top: 3px solid #d9d9d9 !important;
}
/* ==================== */
/* body */
/* ==================== */
.container {
    padding: 0;
    background: white;
    width: 100%;
}
.row {
    margin: 0;
}
#google-calendar-iframe {
    background: white;
    width: 100%;
    border: 2px solid #d9d9d9;
    border-radius: 10px;
    padding: 10px;
    margin: 0;
}
#google-maps-iframe {
    background: white;
    width: 100%;
    border: 2px solid #d9d9d9 !important;
    border-radius: 10px;
    padding: 10px;
    margin: 0;
}
#urp-vimeo-div {
    width: 100%;
    max-width: 500px;
    margin: auto;
}
#urp-vimeo-div iframe {
    width: 100%;
}
blockquote {
    background: #e6e6e6;
    font-style: italic;
    border-left: 3px solid grey;
    border-radius: 10px;
    margin-right: 10px;
}
blockquote p {
    font-size: 1.4rem !important;
}
/* ==================== */
/* footer */
/* ==================== */
footer {
    text-align: center;
}
/* ==================== */
/* forms */
/* ==================== */
label {
    margin-top: 20px;
}
form {
    width: 90%;
    margin: auto;
}
label {
    font-size: 1.5rem;
}
fieldset > textarea,
fieldset > input {
    font-size: 1.3rem;
    width: 100%;
    border: 2px solid #d9d9d9;
    border-radius: 10px;
    padding: 5px;
}
input[type=submit] {
    border: 2px solid #d9d9d9;
    border-radius: 10px;
    padding: 10px;
    width:80px;
    margin: 10px auto;
    background: #ffffff;
    font-size: 1.3rem;
    color: #808080;
}
input[type=submit]:hover {
    border: 2px solid #999999;
    color: black;
}
textarea:focus::-webkit-input-placeholder,
input:focus::-webkit-input-placeholder { color:transparent; }
textarea:focus:-moz-placeholder,
input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
textarea:focus::-moz-placeholder,
input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
textarea:focus:-ms-input-placeholder,
input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
/* ... */

